-kafka events fix -added kafka ui -jwks endpoint moved to grpc from http -added role and premissions usecases -env changes
