# gen/docs/swagger/swagger.yaml
@@ -63,28 +63,6 @@ definitions:
       timestamp:
         type: string
     type: object
-  handlers.JWKSKey:
-    properties:
-      alg:
-        type: string
-      e:
-        type: string
-      kid:
-        type: string
-      kty:
-        type: string
-      "n":
-        type: string
-      use:
-        type: string
-    type: object
-  handlers.JWKSResponse:
-    properties:
-      keys:
-        items:
-          $ref: '#/definitions/handlers.JWKSKey'
-        type: array
-    type: object
   handlers.PasswordChangeRequest:
     properties:
       current_password:
@@ -403,27 +381,6 @@ definitions:
 info:
   contact: {}
 paths:
-  /.well-known/jwks.json:
-    get:
-      description: Exposes the public keys used to verify IAM JWT signatures.
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handlers.JWKSResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "503":
-          description: Service Unavailable
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-      summary: Retrieve JSON Web Key Set
-      tags:
-      - Public
   /api/v1/auth/login:
     post:
       consumes:
